--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![20%](https://progress-bar.dev/20?title=progress&width=100)\n",
+    "![26%](https://progress-bar.dev/26?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -1035,14 +1035,14 @@
    "metadata": {},
    "source": [
     "# 11. \n",
-    "Date: 14th Feb 2024<br>\n",
+    "Date: 15th Feb 2024<br>\n",
     "Hard Leetcode: sliding-window-maximum<br>\n",
     "Solution: https://leetcode.com/problems/sliding-window-maximum/submissions/1175614381"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,6 +1087,151 @@
     "assert Solution().maxSlidingWindow([1, 3, -1, 3, 5, 9, 6, 7, 1], 3) == [3, 3, 5, 9, 9, 9, 7]\n",
     "assert Solution().maxSlidingWindow([1, 3, -1, 3, 5, 9, 6, 7], 5) == [5, 9, 9, 9]\n",
     "assert Solution().maxSlidingWindow([-7, -8, 7, 5, 7, 1, 6, 0],  4) == [7, 7, 7, 7, 7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12. \n",
+    "Date: 16th Feb 2024<br>\n",
+    "Hard Leetcode: word-search-ii<br>\n",
+    "Solution: https://leetcode.com/problems/word-search-ii/submissions/1176699366"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eat', 'oatak', 'oath'}"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findWords(self, board: List[List[str]], words: List[str]) -> List[str]:\n",
+    "\n",
+    "        def prune_prefix_tree(word: str, curr_prefix: dict) -> None:\n",
+    "            if word == \"\":\n",
+    "                del curr_prefix[\"*\"]\n",
+    "            else:\n",
+    "                prune_prefix_tree(word[1:], curr_prefix[word[0]])\n",
+    "                if len(curr_prefix) == 0:\n",
+    "                    del curr_prefix[word[0]]\n",
+    "\n",
+    "        result = set()\n",
+    "        def backtrack(i: int, j: int, curr_prefix: dict, visited: set[tuple[int]]):\n",
+    "            if 0 <= i < M and 0 <= j < N and board[i][j] in curr_prefix:\n",
+    "                next_prefix = curr_prefix[board[i][j]]\n",
+    "                if \"*\" in next_prefix:\n",
+    "                    result.add(next_prefix[\"*\"])\n",
+    "                    prune_prefix_tree(next_prefix[\"*\"], prefix_tree)\n",
+    "                for dir in [(-1, 0), (1, 0), (0, -1), (0, 1)]:\n",
+    "                    i_, j_ = i + dir[0], j + dir[1]\n",
+    "                    if (i_, j_) not in visited:\n",
+    "                        backtrack(i_, j_, next_prefix, {*visited, (i_, j_)})\n",
+    "        \n",
+    "        # Construct the prefix tree: O(word_length * number of words)\n",
+    "        prefix_tree = dict()\n",
+    "        for word in words:\n",
+    "            curr = prefix_tree\n",
+    "            for ch in word + \"*\":\n",
+    "                curr[ch] = curr.get(ch, dict())\n",
+    "                if ch == \"*\":\n",
+    "                    curr[ch] = word\n",
+    "                curr = curr[ch]\n",
+    "\n",
+    "        # Backtrack into the grid as long as there is a match, if match - remove word \n",
+    "        M = len(board)\n",
+    "        N = len(board[0])\n",
+    "        for i in range(M):\n",
+    "            for j in range(N):\n",
+    "                backtrack(i, j, prefix_tree, {(i, j)})\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().findWords([[\"o\",\"a\",\"a\",\"n\"],[\"e\",\"t\",\"a\",\"e\"],[\"i\",\"h\",\"k\",\"r\"],[\"i\",\"f\",\"l\",\"v\"]], [\"oath\",\"pea\",\"eat\",\"rain\", \"oatak\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 13. \n",
+    "Date: 16th Feb 2024<br>\n",
+    "Hard Leetcode: maximum-score-words-formed-by-letters<br>\n",
+    "Solution: https://leetcode.com/problems/maximum-score-words-formed-by-letters/submissions/1177035354/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    def sub_dict(d1: dict, d2: dict):\n",
+    "        updated = dict(d1)\n",
+    "        for ch in d2:\n",
+    "            if ch not in updated or updated[ch] < d2[ch]:\n",
+    "                return None\n",
+    "            else:\n",
+    "                updated[ch] -= d2[ch]\n",
+    "        return updated\n",
+    "\n",
+    "    def maxScoreWords(self, words: List[str], letters: List[str], score: List[int]) -> int:\n",
+    "\n",
+    "        N_WORDS = len(words)\n",
+    "        \n",
+    "        # Letters_dict, words_dict, scores_dict\n",
+    "        letters_ = dict(collections.Counter(letters))\n",
+    "        words_ = []\n",
+    "        scores_ = []\n",
+    "        for word in words:\n",
+    "            word_ = dict()\n",
+    "            score_ = 0\n",
+    "            for ch in word:\n",
+    "                word_[ch] = word_.get(ch, 0) + 1\n",
+    "                score_ += score[ord(ch) - 97]\n",
+    "            words_.append(word_)\n",
+    "            scores_.append(score_)\n",
+    "\n",
+    "        def backtrack(idx: int, ld: dict) -> int:\n",
+    "\n",
+    "            if idx >= N_WORDS:\n",
+    "                return 0\n",
+    "            \n",
+    "            word_freq = words_[idx]\n",
+    "            result = -math.inf\n",
+    "            \n",
+    "            # Pick\n",
+    "            ld_pick = Solution.sub_dict(ld, word_freq)\n",
+    "            if ld_pick:\n",
+    "                result = scores_[idx] + backtrack(idx + 1, ld_pick)\n",
+    "\n",
+    "            # No Pick\n",
+    "            result = max(result, backtrack(idx + 1, ld))\n",
+    "\n",
+    "            return result \n",
+    "\n",
+    "        result = backtrack(0, letters_)\n",
+    "        return result\n",
+    "    \n",
+    "# Testing the solution\n",
+    "assert Solution().maxScoreWords([\"dog\",\"cat\",\"dad\",\"good\"], [\"a\",\"a\",\"c\",\"d\",\"d\",\"d\",\"g\",\"o\",\"o\"], [1,0,9,5,0,0,3,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0]) == 23\n",
+    "assert Solution().maxScoreWords([\"xxxz\",\"ax\",\"bx\",\"cx\"], [\"z\",\"a\",\"b\",\"c\",\"x\",\"x\",\"x\"], [4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,5,0,10]) == 27\n",
+    "assert Solution().maxScoreWords([\"leetcode\"], [\"l\",\"e\",\"t\",\"c\",\"o\",\"d\"], [0,0,1,1,1,0,0,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,0,0,0,0]) == 0\n",
+    "assert Solution().maxScoreWords([\"baa\",\"bba\",\"ccb\",\"ac\"], [\"a\",\"b\",\"b\",\"b\",\"b\",\"c\"], [2,2,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]) == 6"
    ]
   },
   {
