--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![26%](https://progress-bar.dev/26?title=progress&width=100)\n",
+    "![30%](https://progress-bar.dev/30?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -887,7 +887,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 7152.42it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 7637.83it/s]\n"
      ]
     }
    ],
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
        "{'eat', 'oatak', 'oath'}"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,6 +1232,121 @@
     "assert Solution().maxScoreWords([\"xxxz\",\"ax\",\"bx\",\"cx\"], [\"z\",\"a\",\"b\",\"c\",\"x\",\"x\",\"x\"], [4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,5,0,10]) == 27\n",
     "assert Solution().maxScoreWords([\"leetcode\"], [\"l\",\"e\",\"t\",\"c\",\"o\",\"d\"], [0,0,1,1,1,0,0,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,0,0,0,0]) == 0\n",
     "assert Solution().maxScoreWords([\"baa\",\"bba\",\"ccb\",\"ac\"], [\"a\",\"b\",\"b\",\"b\",\"b\",\"c\"], [2,2,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 14. \n",
+    "Date: 17th Feb 2024<br>\n",
+    "Hard Leetcode: permutation-sequence<br>\n",
+    "Solution: https://leetcode.com/problems/permutation-sequence/submissions/1177409098/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7/7 [00:01<00:00,  6.90it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def getPermutation(self, n: int, k: int) -> str:\n",
+    "\n",
+    "        total = math.factorial(n)\n",
+    "        nums = [str(_) for _ in range(1, n + 1)]\n",
+    "\n",
+    "        def backtrack(nums_: list[int], k_: int, n_: int, i_: int) -> str:\n",
+    "            if len(nums_) == 1:\n",
+    "                return nums_[0]\n",
+    "\n",
+    "            curr_idx = k_ // n_\n",
+    "            curr = nums_[k_ // n_]\n",
+    "\n",
+    "            return curr + backtrack(sorted(nums_[:curr_idx] + nums_[curr_idx + 1:]), k_ % n_, n_ // i_, i_ - 1)\n",
+    "\n",
+    "        return backtrack(nums, k - 1, total // n, n - 1)\n",
+    "\n",
+    "    def naive(self, n: int, k: int) -> str:\n",
+    "        nums = [str(_) for _ in range(1, n + 1)]\n",
+    "        perms = itertools.permutations(nums, n)\n",
+    "        result = None\n",
+    "        for _ in range(k):\n",
+    "            result = next(perms)\n",
+    "\n",
+    "        return \"\".join(result)\n",
+    "\n",
+    "# Testing the Solution\n",
+    "for n in tqdm.tqdm(range(1, 8)):\n",
+    "    for k in range(1, math.factorial(n) + 1):\n",
+    "        assert Solution().naive(n, k) == Solution().getPermutation(n, k)\n",
+    "\n",
+    "assert Solution().getPermutation(9, math.factorial(9)) == '987654321'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15. \n",
+    "Date: 17th Feb 2024<br>\n",
+    "Hard Leetcode: max-points-on-a-line<br>\n",
+    "Solution: https://leetcode.com/problems/max-points-on-a-line/submissions/1177463531/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def equation(pt1: List[int], pt2: List[int]) -> List[int]:\n",
+    "        \"\"\"\n",
+    "        https://math.stackexchange.com/a/1734022\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Points X, Y\n",
+    "        (x1, y1), (x2, y2) = pt1, pt2\n",
+    "\n",
+    "        # Y = MX + C\n",
+    "        if abs(x2 - x1) > 0:\n",
+    "            M = (y2 - y1) / (x2 - x1)\n",
+    "            C = ((x2 * y1) - (x1 * y2)) / (x2 - x1)\n",
+    "            return M, C, None\n",
+    "\n",
+    "        else: # For cases where X = C\n",
+    "            return None, None, x1\n",
+    "\n",
+    "    def maxPoints(self, points: List[List[int]]) -> int:\n",
+    "        N = len(points)\n",
+    "        if N == 1:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            hm: dict[tuple[int], set[tuple[int]]] = dict()\n",
+    "            for i in range(N - 1):\n",
+    "                for j in range(i + 1, N):\n",
+    "                    eq = Solution.equation(points[i], points[j])\n",
+    "                    line_pts = hm.get(eq, set())\n",
+    "                    line_pts.add(tuple(points[i]))\n",
+    "                    line_pts.add(tuple(points[j]))\n",
+    "                    hm[eq] = line_pts\n",
+    "\n",
+    "            return max(map(len, hm.values()))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maxPoints([[1, 1], [3, 2], [5, 3], [4, 1], [2, 3], [1, 4], [6, -1]]) == 5\n",
+    "assert Solution().maxPoints([[1, 1], [2, 2], [3, 3], [0, 0]]) == 4\n",
+    "assert Solution().maxPoints([[0, 0]]) == 1\n",
+    "assert Solution().maxPoints([[0, 1], [0, 2], [2, 2], [1, 0], [2, 0]]) == 2"
    ]
   },
   {
