--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![30%](https://progress-bar.dev/30?title=progress&width=100)\n",
+    "![34%](https://progress-bar.dev/34?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,6 +1348,105 @@
     "assert Solution().maxPoints([[0, 0]]) == 1\n",
     "assert Solution().maxPoints([[0, 1], [0, 2], [2, 2], [1, 0], [2, 0]]) == 2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 16. \n",
+    "Date: 18th Feb 2024<br>\n",
+    "Hard Leetcode: earliest-possible-day-of-full-bloom<br>\n",
+    "Solution: https://leetcode.com/problems/earliest-possible-day-of-full-bloom/submissions/1178490688/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def earliestFullBloom(self, plantTime: List[int], growTime: List[int]) -> int:\n",
+    "        \"\"\"\n",
+    "        The idea is to start with planting the seeds that take the most time\n",
+    "        Calculate remaining time and return the sum\n",
+    "        \"\"\"\n",
+    "        plantTime, growTime = zip(*sorted(zip(plantTime, growTime), key=lambda x: x[1], reverse=True))\n",
+    "\n",
+    "        total = 0\n",
+    "        remaining = None\n",
+    "        for p, g in zip(plantTime, growTime):\n",
+    "            total += p\n",
+    "            remaining = g if remaining is None else max(remaining - p, g)\n",
+    "\n",
+    "        return total + remaining\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().earliestFullBloom([1, 2, 3, 2],  [2, 1, 2, 1]) == 9\n",
+    "assert Solution().earliestFullBloom([1, 4, 3], [2, 3, 1]) == 9\n",
+    "assert Solution().earliestFullBloom(\n",
+    "    [27, 5, 24, 17, 27, 4, 23, 16, 6, 26, 13, 17, 21, 3, 9, 10, 28, 26, 4, 10, 28, 2],  \n",
+    "    [26, 9, 14, 17, 6, 14, 23, 24, 11, 6, 27, 14, 13, 1, 15, 5, 12, 15, 23, 27, 28, 12]\n",
+    ") == 348"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 17. \n",
+    "Date: 18th Feb 2024<br>\n",
+    "Hard Leetcode: number-of-visible-people-in-a-queue<br>\n",
+    "Solution: https://leetcode.com/problems/number-of-visible-people-in-a-queue/submissions/1178697347/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def canSeePersonsCount(self, heights: List[int]) -> List[int]:\n",
+    "        N = len(heights)\n",
+    "        stack = []\n",
+    "        result = []\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            count = 1\n",
+    "            while stack and heights[i] > heights[stack[-1]]:\n",
+    "                stack.pop()\n",
+    "                count += 1\n",
+    "            if not stack:\n",
+    "                count -= 1\n",
+    "            result.append(count)\n",
+    "            stack.append(i)\n",
+    "\n",
+    "        result.reverse()\n",
+    "        return result\n",
+    "    \n",
+    "# Testing the solution - the ques was simple,\n",
+    "# but really annoyed me with so many errors\n",
+    "temp = [\n",
+    "    [[1,2,3,4], [1,1,1,0]], [[1,2,4,3], [1,1,1,0]], [[1,3,2,4], [1,2,1,0]],\n",
+    "    [[1,3,4,2], [1,1,1,0]], [[1,4,2,3], [1,2,1,0]], [[1,4,3,2], [1,1,1,0]],\n",
+    "    [[2,1,3,4], [2,1,1,0]], [[2,1,4,3], [2,1,1,0]], [[2,3,1,4], [1,2,1,0]],\n",
+    "    [[2,3,4,1], [1,1,1,0]], [[2,4,1,3], [1,2,1,0]], [[2,4,3,1], [1,1,1,0]],\n",
+    "    [[3,1,2,4], [3,1,1,0]], [[3,1,4,2], [2,1,1,0]], [[3,2,1,4], [2,2,1,0]],\n",
+    "    [[3,2,4,1], [2,1,1,0]], [[3,4,1,2], [1,2,1,0]], [[3,4,2,1], [1,1,1,0]],\n",
+    "    [[4,1,2,3], [3,1,1,0]], [[4,1,3,2], [2,1,1,0]], [[4,2,1,3], [2,2,1,0]],\n",
+    "    [[4,2,3,1], [2,1,1,0]], [[4,3,1,2], [1,2,1,0]], [[4,3,2,1], [1,1,1,0]],\n",
+    "]\n",
+    "\n",
+    "for q, a in temp:\n",
+    "    assert Solution().canSeePersonsCount(q) == a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
