--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,11 +1442,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 18. \n",
+    "Date: 19th Feb 2024<br>\n",
+    "Hard Leetcode: minimum-insertion-steps-to-make-a-string-palindrome<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-insertion-steps-to-make-a-string-palindrome/submissions/1179413048"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def minInsertions(self, s: str) -> int:\n",
+    "\n",
+    "        @functools.cache\n",
+    "        def countInsertionSteps(left: int, right: int) -> int:\n",
+    "            if left < 0 and right >= N:\n",
+    "                return 0\n",
+    "            elif left < 0:\n",
+    "                return N - right\n",
+    "            elif right >= N:\n",
+    "                return left + 1\n",
+    "            elif s[left] == s[right]:\n",
+    "                return countInsertionSteps(left - 1, right + 1)\n",
+    "            else:\n",
+    "                return min(\n",
+    "                    2 + countInsertionSteps(left - 1, right + 1),\n",
+    "                    1 + countInsertionSteps(left - 1, right),\n",
+    "                    1 + countInsertionSteps(left, right + 1),\n",
+    "                )\n",
+    "\n",
+    "        N = len(s)\n",
+    "        minSteps = +math.inf\n",
+    "        for i in range(N):\n",
+    "            left, right = i - 1, i + 1\n",
+    "            minSteps = min(minSteps, countInsertionSteps(left, right))\n",
+    "            if i != N - 1:\n",
+    "                left, right = i, i + 1\n",
+    "                minSteps = min(minSteps, countInsertionSteps(left, right))\n",
+    "        return minSteps\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minInsertions(\"zzazz\") == 0\n",
+    "assert Solution().minInsertions(\"mbadm\") == 2\n",
+    "assert Solution().minInsertions(\"leetcode\") == 5\n",
+    "assert Solution().minInsertions(\"missouri\") == 4"
+   ]
   },
   {
    "cell_type": "code",
