--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -2359,6 +2359,7 @@
      "iopub.status.idle": "2024-02-22T16:03:54.682301Z",
      "shell.execute_reply": "2024-02-22T16:03:54.681424Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.021351,
      "end_time": "2024-02-22T16:03:54.684000",
@@ -2445,6 +2446,85 @@
     "assert Solution().isPrintable([[1,1,1,1], [1,2,2,1], [1,2,2,1], [1,1,1,1]]) == True\n",
     "assert Solution().isPrintable([[1,2,1], [2,1,2], [1,2,1]]) == False\n",
     "assert Solution().isPrintable([[5,1,5,3,5],[4,4,4,3,4],[5,1,5,3,5],[2,1,2,2,2],[5,1,5,3,5]]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "582a7ec7",
+   "metadata": {},
+   "source": [
+    "# 23. \n",
+    "Date: 23rd Feb 2024<br>\n",
+    "Hard Leetcode: sudoku-solver<br>\n",
+    "Solution: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "821d3090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def solveSudoku(self, board: List[List[str]]) -> None:\n",
+    "        def getPossibilities(i: int, j: int) -> set[str]:\n",
+    "            result: set[str] = set(map(str, range(1, 10)))\n",
+    "\n",
+    "            # Eliminate all values already present in same row\n",
+    "            for k in range(9):\n",
+    "                if board[i][k] in result:\n",
+    "                    result.remove(board[i][k])\n",
+    "\n",
+    "            # Eliminate all values already present in the same col\n",
+    "            for k in range(9):\n",
+    "                if board[k][j] in result:\n",
+    "                    result.remove(board[k][j])\n",
+    "\n",
+    "            # Eliminate all values already present in the same grid\n",
+    "            floor_i = math.floor(i / 3)\n",
+    "            for i_ in range(floor_i * 3, (floor_i + 1) * 3):\n",
+    "                floor_j = math.floor(j / 3)\n",
+    "                for j_ in range(floor_j * 3, (floor_j + 1) * 3):\n",
+    "                    if board[i_][j_] in result:\n",
+    "                        result.remove(board[i_][j_])\n",
+    "\n",
+    "            return result\n",
+    "\n",
+    "        def backtrack() -> bool:\n",
+    "            missing = 0\n",
+    "            for i in range(9):\n",
+    "                for j in range(9):\n",
+    "                    if board[i][j] == \".\":\n",
+    "                        missing += 1\n",
+    "                        for n in getPossibilities(i, j):\n",
+    "                            board[i][j] = n\n",
+    "                            if backtrack():\n",
+    "                                return True\n",
+    "                        else:\n",
+    "                            return False\n",
+    "\n",
+    "            if missing == 0:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "\n",
+    "        # Call helper function\n",
+    "        backtrack()\n",
+    "        print (board)\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().solveSudoku([\n",
+    "    [\"5\",\"3\",\".\",\".\",\"7\",\".\",\".\",\".\",\".\"],\n",
+    "    [\"6\",\".\",\".\",\"1\",\"9\",\"5\",\".\",\".\",\".\"],\n",
+    "    [\".\",\"9\",\"8\",\".\",\".\",\".\",\".\",\"6\",\".\"],\n",
+    "    [\"8\",\".\",\".\",\".\",\"6\",\".\",\".\",\".\",\"3\"],\n",
+    "    [\"4\",\".\",\".\",\"8\",\".\",\"3\",\".\",\".\",\"1\"],\n",
+    "    [\"7\",\".\",\".\",\".\",\"2\",\".\",\".\",\".\",\"6\"],\n",
+    "    [\".\",\"6\",\".\",\".\",\".\",\".\",\"2\",\"8\",\".\"],\n",
+    "    [\".\",\".\",\".\",\"4\",\"1\",\"9\",\".\",\".\",\"5\"],\n",
+    "    [\".\",\".\",\".\",\".\",\"8\",\".\",\".\",\"7\",\"9\"]\n",
+    "])"
    ]
   }
  ],
