Only build modified files
Updated build.py to fetch modified files and only build view if
the files have been modified in the latest commit

--- a/challenges/leetcode/50HL30D.ipynb
+++ b/challenges/leetcode/50HL30D.ipynb
@@ -3074,6 +3074,27 @@
     "\n",
     "\"\"\", con=conn)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa9ff97a",
+   "metadata": {},
+   "source": [
+    "# 28. \n",
+    "Date: 27th Feb 2024<br>\n",
+    "Hard Leetcode: stamping-the-sequence<br>\n",
+    "Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24b75044",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
